--- a/音乐2.1
+++ b/音乐2.1
@@ -60,7 +60,7 @@ local function CreateFullUI()
     twinButton.Text = "Twin"
     twinButton.Font = Enum.Font.SourceSansBold
     twinButton.TextSize = 12
-    twinButton.TextColor极 = Color3.fromRGB(255, 255, 255)
+    twinButton.TextColor = Color3.fromRGB(255, 255, 255)
     twinButton.BackgroundColor3 = Color3.fromRGB(120, 120, 200)
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
@@ -68,7 +68,7 @@ local function CreateFullUI()
     -- 输入框创建函数
     local function CreateInputBox(posY, placeholder, sizeX, posX)
         local box = Instance.new("TextBox")
-        box.Size = UDim2.new(size极, 0, 0, 25)
+        box.Size = UDim2.new(size, 0, 0, 25)
         box.Position = UDim2.new(posX, 0, posY, 0)
         box.PlaceholderText = placeholder
         box.BackgroundColor3 = Color3.fromRGB(245, 245, 245)
